@@ -51,6 +51,7 @@ import org.json.JSONObject;
 import org.slf4j.Logger;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
@@ -68,21 +69,21 @@ public class MiscCmds {
     private final DataManager<List<String>> facts = new SimpleFileDataManager("assets/mantaro/texts/facts.txt");
     private final Random rand = new Random();
     private final Pattern pollOptionSeparator = Pattern.compile(",\\s*");
-
+    
     public static void iamFunction(String autoroleName, GuildMessageReceivedEvent event, I18nContext languageContext) {
         iamFunction(autoroleName, event, languageContext, null);
     }
-
+    
     public static void iamFunction(String autoroleName, GuildMessageReceivedEvent event, I18nContext languageContext, String message) {
         DBGuild dbGuild = MantaroData.db().getGuild(event.getGuild());
         Map<String, String> autoroles = dbGuild.getData().getAutoroles();
         TextChannel channel = event.getChannel();
-
+        
         if(autoroles.containsKey(autoroleName)) {
             Role role = event.getGuild().getRoleById(autoroles.get(autoroleName));
             if(role == null) {
                 channel.sendMessageFormat(languageContext.get("commands.iam.deleted_role"), EmoteReference.ERROR).queue();
-
+                
                 //delete the non-existent autorole.
                 dbGuild.getData().getAutoroles().remove(autoroleName);
                 dbGuild.saveAsync();
@@ -112,27 +113,27 @@ public class MiscCmds {
             }
         } else {
             new MessageBuilder().
-                    append(String.format(languageContext.get("commands.iam.no_role"), EmoteReference.ERROR, autoroleName))
+                                        append(String.format(languageContext.get("commands.iam.no_role"), EmoteReference.ERROR, autoroleName))
                     .stripMentions(event.getJDA())
                     .sendTo(channel)
                     .queue();
         }
     }
-
+    
     public static void iamnotFunction(String autoroleName, GuildMessageReceivedEvent event, I18nContext languageContext) {
         iamnotFunction(autoroleName, event, languageContext, null);
     }
-
+    
     public static void iamnotFunction(String autoroleName, GuildMessageReceivedEvent event, I18nContext languageContext, String message) {
         DBGuild dbGuild = MantaroData.db().getGuild(event.getGuild());
         Map<String, String> autoroles = dbGuild.getData().getAutoroles();
         TextChannel channel = event.getChannel();
-
+        
         if(autoroles.containsKey(autoroleName)) {
             Role role = event.getGuild().getRoleById(autoroles.get(autoroleName));
             if(role == null) {
                 channel.sendMessageFormat(languageContext.get("commands.iam.deleted_role"), EmoteReference.ERROR).queue();
-
+                
                 //delete the non-existent autorole.
                 dbGuild.getData().getAutoroles().remove(autoroleName);
                 dbGuild.saveAsync();
@@ -159,52 +160,52 @@ public class MiscCmds {
             }
         } else {
             new MessageBuilder().
-                    append(String.format(languageContext.get("commands.iam.no_role"), EmoteReference.ERROR, autoroleName))
+                                        append(String.format(languageContext.get("commands.iam.no_role"), EmoteReference.ERROR, autoroleName))
                     .stripMentions(event.getJDA())
                     .sendTo(channel)
                     .queue();
         }
     }
-
+    
     @Subscribe
     public void eightBall(CommandRegistry cr) {
         cr.register("8ball", new SimpleCommand(Category.MISC) {
             @Override
             protected void call(GuildMessageReceivedEvent event, I18nContext languageContext, String content, String[] args) {
                 TextChannel channel = event.getChannel();
-
+                
                 if(content.isEmpty()) {
                     channel.sendMessageFormat(languageContext.get("commands.8ball.no_args"), EmoteReference.ERROR).queue();
                     return;
                 }
-
+                
                 String textEncoded;
                 String answer;
                 try {
-                    textEncoded = URLEncoder.encode(content, "UTF-8");
+                    textEncoded = URLEncoder.encode(content, StandardCharsets.UTF_8);
                     String json = Utils.wgetOkHttp(String.format("https://8ball.delegator.com/magic/JSON/%1s", textEncoded));
                     answer = new JSONObject(json).getJSONObject("magic").getString("answer");
                 } catch(Exception exception) {
                     channel.sendMessageFormat(languageContext.get("commands.8ball.error"), EmoteReference.ERROR).queue();
                     return;
                 }
-
+                
                 channel.sendMessage("\uD83D\uDCAC " + answer + ".").queue(); //owo
             }
-
+            
             @Override
             public HelpContent help() {
                 return new HelpContent.Builder()
-                        .setDescription("Retrieves an answer from the almighty 8ball.")
-                        .setUsage("`~>8ball <question>` - Retrieves an answer from 8ball based on the question or sentence provided.")
-                        .addParameter("question", "The question to ask.")
-                        .build();
+                               .setDescription("Retrieves an answer from the almighty 8ball.")
+                               .setUsage("`~>8ball <question>` - Retrieves an answer from 8ball based on the question or sentence provided.")
+                               .addParameter("question", "The question to ask.")
+                               .build();
             }
         });
-
+        
         cr.registerAlias("8ball", "8b");
     }
-
+    
     @Subscribe
     public void iam(CommandRegistry cr) {
         TreeCommand iamCommand = (TreeCommand) cr.register("iam", new TreeCommand(Category.MISC) {
@@ -219,56 +220,56 @@ public class MiscCmds {
                             event.getChannel().sendMessageFormat(languageContext.get("commands.iam.no_iam"), EmoteReference.ERROR).queue();
                             return;
                         }
-
+                        
                         iamFunction(content.trim().replace("\"", ""), event, languageContext);
                     }
                 };
             }
-
+            
             @Override
             public HelpContent help() {
                 return new HelpContent.Builder()
-                        .setDescription("Get an autorole that your server administrators have set up.")
-                        .setUsage("`~>iam <name>` - Get the role with the specified name.\n"
-                                + "`~>iam list` - List all the available autoroles in this server. Use this to check which autoroles you can get!")
-                        .addParameter("name", "The name of the autorole to get.")
-                        .build();
+                               .setDescription("Get an autorole that your server administrators have set up.")
+                               .setUsage("`~>iam <name>` - Get the role with the specified name.\n"
+                                                 + "`~>iam list` - List all the available autoroles in this server. Use this to check which autoroles you can get!")
+                               .addParameter("name", "The name of the autorole to get.")
+                               .build();
             }
         });
-
+        
         iamCommand.addSubCommand("ls", new SubCommand() {
             @Override
             public String description() {
                 return "Lists all the available autoroles for this server.";
             }
-
+            
             @Override
             protected void call(GuildMessageReceivedEvent event, I18nContext languageContext, String content) {
                 TextChannel channel = event.getChannel();
-
+                
                 EmbedBuilder embed;
                 DBGuild dbGuild = MantaroData.db().getGuild(event.getGuild());
                 GuildData guildData = dbGuild.getData();
-
+                
                 Map<String, String> autoroles = guildData.getAutoroles();
                 Map<String, List<String>> autorolesCategories = guildData.getAutoroleCategories();
                 List<MessageEmbed.Field> fields = new LinkedList<>();
                 StringBuilder stringBuilder = new StringBuilder();
-
+                
                 boolean hasReactionPerms = event.getGuild().getSelfMember().hasPermission(channel, Permission.MESSAGE_ADD_REACTION);
-
+                
                 if(!hasReactionPerms)
                     stringBuilder.append(languageContext.get("general.text_menu")).append("\n");
-
+                
                 embed = baseEmbed(event, languageContext.get("commands.iam.list.header"))
-                        .setDescription(languageContext.get("commands.iam.list.description") + stringBuilder.toString())
-                        .setThumbnail(event.getGuild().getIconUrl());
-
+                                .setDescription(languageContext.get("commands.iam.list.description") + stringBuilder.toString())
+                                .setThumbnail(event.getGuild().getIconUrl());
+                
                 if(autoroles.size() > 0) {
                     List<String> categorizedRoles = new ArrayList<>();
                     autorolesCategories.forEach((cat, roles) -> {
                         StringBuilder roleString = new StringBuilder();
-
+                        
                         for(String iam : roles) {
                             String roleId = autoroles.get(iam);
                             if(roleId != null) {
@@ -277,11 +278,11 @@ public class MiscCmds {
                                 categorizedRoles.add(role.getId());
                             }
                         }
-
+                        
                         if(roleString.length() > 0)
                             fields.add(new MessageEmbed.Field(cat, languageContext.get("commands.iam.list.role") + " `" + roleString + "`", false));
                     });
-
+                    
                     autoroles.forEach((name, roleId) -> {
                         if(!categorizedRoles.contains(roleId)) {
                             Role role = event.getGuild().getRoleById(roleId);
@@ -290,7 +291,7 @@ public class MiscCmds {
                             }
                         }
                     });
-
+                    
                     List<List<MessageEmbed.Field>> parts = DiscordUtils.divideFields(6, fields);
                     if(hasReactionPerms) {
                         DiscordUtils.list(event, 100, false, embed, parts);
@@ -299,19 +300,19 @@ public class MiscCmds {
                     }
                 } else {
                     embed = baseEmbed(event, languageContext.get("commands.iam.list.header"))
-                            .setThumbnail(event.getGuild().getIconUrl())
-                            .setDescription(languageContext.get("commands.iam.list.no_autoroles"));
-
+                                    .setThumbnail(event.getGuild().getIconUrl())
+                                    .setDescription(languageContext.get("commands.iam.list.no_autoroles"));
+                    
                     channel.sendMessage(embed.build()).queue();
                 }
             }
         });
-
+        
         cr.registerAlias("iam", "autoroles");
         iamCommand.createSubCommandAlias("ls", "list");
         iamCommand.createSubCommandAlias("ls", "Is");
     }
-
+    
     @Subscribe
     public void iamnot(CommandRegistry cr) {
         cr.register("iamnot", new SimpleCommand(Category.MISC) {
@@ -321,21 +322,21 @@ public class MiscCmds {
                     event.getChannel().sendMessageFormat(languageContext.get("commands.iamnot.no_args"), EmoteReference.ERROR).queue();
                     return;
                 }
-
+                
                 iamnotFunction(content.trim().replace("\"", ""), event, languageContext);
             }
-
+            
             @Override
             public HelpContent help() {
                 return new HelpContent.Builder()
-                        .setDescription("Remove an autorole from yourself that your server administrators have set up.")
-                        .setUsage("`~>iamnot <name>` - Remove the role from yourself with the specified name.")
-                        .addParameter("name", "The name of the autorole to remove.")
-                        .build();
+                               .setDescription("Remove an autorole from yourself that your server administrators have set up.")
+                               .setUsage("`~>iamnot <name>` - Remove the role from yourself with the specified name.")
+                               .addParameter("name", "The name of the autorole to remove.")
+                               .build();
             }
         });
     }
-
+    
     @Subscribe
     public void randomFact(CommandRegistry cr) {
         cr.register("randomfact", new SimpleCommand(Category.MISC) {
@@ -343,61 +344,61 @@ public class MiscCmds {
             protected void call(GuildMessageReceivedEvent event, I18nContext languageContext, String content, String[] args) {
                 event.getChannel().sendMessage(EmoteReference.TALKING + facts.get().get(rand.nextInt(facts.get().size() - 1))).queue();
             }
-
+            
             @Override
             public HelpContent help() {
                 return new HelpContent.Builder()
-                        .setDescription("Sends a random fact.")
-                        .build();
+                               .setDescription("Sends a random fact.")
+                               .build();
             }
         });
-
+        
         cr.registerAlias("randomfact", "rf");
     }
-
+    
     @Subscribe
     public void createPoll(CommandRegistry registry) {
         registry.register("createpoll", new SimpleCommand(Category.MISC) {
             @Override
             protected void call(GuildMessageReceivedEvent event, I18nContext languageContext, String content, String[] args) {
                 TextChannel channel = event.getChannel();
-
+                
                 Map<String, String> opts = StringUtils.parse(args);
                 PollBuilder builder = Poll.builder();
                 if(!opts.containsKey("time") || opts.get("time") == null) {
                     channel.sendMessageFormat(languageContext.get("commands.poll.missing"), EmoteReference.ERROR, "`-time`", "Example: `~>poll -options \"hi there\",\"wew\",\"owo what's this\" -time 10m20s -name \"test poll\"").queue();
                     return;
                 }
-
+                
                 if(!opts.containsKey("options") || opts.get("options") == null) {
                     channel.sendMessageFormat(languageContext.get("commands.poll.missing"), EmoteReference.ERROR, "`-options`", "Example: ~>poll -options \"hi there\",\"wew\",\"owo what's this\" -time 10m20s -name \"test poll\"").queue();
                     return;
                 }
-
+                
                 if(!opts.containsKey("name") || opts.get("name") == null) {
                     channel.sendMessageFormat(languageContext.get("commands.poll.missing"), EmoteReference.ERROR, "`-name`", "Example: ~>poll -options \"hi there\",\"wew\",\"owo what's this\" -time 10m20s -name \"test poll\"").queue();
                     return;
                 }
-
+                
                 if(opts.containsKey("name") && opts.get("name") != null) {
                     builder.setName(opts.get("name").replaceAll(String.valueOf('"'), ""));
                 }
-
+                
                 if(opts.containsKey("image") && opts.get("image") != null) {
                     builder.setImage(opts.get("image"));
                 }
-
-
+                
+                
                 String[] options = pollOptionSeparator.split(opts.get("options").replaceAll(String.valueOf('"'), ""));
                 long timeout;
-
+                
                 try {
                     timeout = Utils.parseTime(opts.get("time"));
-                } catch (Exception e) {
+                } catch(Exception e) {
                     channel.sendMessageFormat(languageContext.get("commands.poll.incorrect_time_format"), EmoteReference.ERROR).queue();
                     return;
                 }
-
+                
                 builder.setEvent(event)
                         .setTimeout(timeout)
                         .setOptions(options)
@@ -405,25 +406,25 @@ public class MiscCmds {
                         .build()
                         .startPoll();
             }
-
+            
             @Override
             public HelpContent help() {
                 return new HelpContent.Builder()
-                        .setDescription("Creates a poll.")
-                        .setUsage("`~>poll [-options <options>] [-time <time>] [-name <name>] [-image <image>]`\n" +
-                                "To cancel the running poll type &cancelpoll. Only the person who started it or an Admin can cancel it.\n" +
-                                "Example: `~>poll -options \"hi there\",\"wew\",\"owo what's this\" -time 10m20s -name \"test poll\"`")
-                        .addParameter("-options", "The options to add. Minimum is 2 and maximum is 9. For instance: `Pizza,Spaghetti,Pasta,\"Spiral Nudels\"` (Enclose options with multiple words in double quotes, there has to be no spaces between the commas)")
-                        .addParameter("time", "The time the operation is gonna take. The format is as follows `1m29s` for 1 minute and 21 seconds. Maximum poll runtime is 45 minutes.")
-                        .addParameter("-name", "The name of the poll.")
-                        .addParameter("-image", "The image to embed to the poll.")
-                        .build();
+                               .setDescription("Creates a poll.")
+                               .setUsage("`~>poll [-options <options>] [-time <time>] [-name <name>] [-image <image>]`\n" +
+                                                 "To cancel the running poll type &cancelpoll. Only the person who started it or an Admin can cancel it.\n" +
+                                                 "Example: `~>poll -options \"hi there\",\"wew\",\"owo what's this\" -time 10m20s -name \"test poll\"`")
+                               .addParameter("-options", "The options to add. Minimum is 2 and maximum is 9. For instance: `Pizza,Spaghetti,Pasta,\"Spiral Nudels\"` (Enclose options with multiple words in double quotes, there has to be no spaces between the commas)")
+                               .addParameter("time", "The time the operation is gonna take. The format is as follows `1m29s` for 1 minute and 21 seconds. Maximum poll runtime is 45 minutes.")
+                               .addParameter("-name", "The name of the poll.")
+                               .addParameter("-image", "The image to embed to the poll.")
+                               .build();
             }
         });
-
+        
         registry.registerAlias("createpoll", "poll");
     }
-
+    
     /**
      * @return a random hex color.
      */
